tests/executionspec/snapshots/execution_spec__io-cache.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server(graphiql: true, hostname: "0.0.0.0", port: 8000) @upstream(baseURL: "http://jsonplaceholder.typicode.com", httpCache: true) {
  query: Query
}

type Post {
  body: String!
  id: Int!
  title: String!
  user: User @http(path: "/users/{{.value.userId}}")
  userId: Int!
}

type Query {
  posts: [Post] @http(path: "/posts")
}

type User {
  id: Int!
  name: String!
}
