tests/executionspec/snapshots/execution_spec__n-plus-one.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type Bar {
  foo: [Foo]
  fooId: Int!
  id: Int!
}

scalar Date

scalar Email

scalar Empty

type Foo {
  bar: Bar
  id: Int!
  name: String!
}

scalar JSON

scalar PhoneNumber

type Query {
  bars: [Bar]
  foos: [Foo]
}

scalar Url

schema {
  query: Query
}
