tests/executionspec/snapshots/execution_spec__recursive-types.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar Empty

scalar JSON

scalar PhoneNumber

type Query {
  user: User
}

scalar Url

type User {
  friend: User
  id: Int
  name: String
}

schema {
  query: Query
}
